made sent button defualt so that it is easier to see

--- a/group_play.html
+++ b/group_play.html
@@ -107,7 +107,7 @@
 <div class="input-group mb-3">
   <input type="text" class="form-control" placeholder="Post message..." aria-label="Recipient's username" aria-describedby="basic-addon2" id="chat">
   <div class="input-group-append">
-    <button class="btn btn-outline-secondary" type="button" onclick="sendchat()">Send</button>
+    <button class="btn btn-default" type="button" onclick="sendchat()">Send</button>
   </div>
 </div>
 
