--- a/skills_list.html
+++ b/skills_list.html
@@ -84,8 +84,9 @@
 			      <img src="images/d5.jpg" alt="img">
 			      <div class="caption">
 			        <h3>Laser Tag</h3>
-			        <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			        <a href="#" class="btn btn-primary" role="button">Groups</a> </p>
+			        <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;
+			        	<a href="#" class="btn btn-primary" role="button">Groups</a>&nbsp;&nbsp;
+			        <a href="#" class="btn btn-primary" role="button" data-toggle="modal" data-target="#myAlert">Subscribe</a> </p>
 			      </div>
 			    </div>
 			  </div>
@@ -94,8 +95,9 @@
 			      <img src="images/d1.jpg" alt="img">
 			      <div class="caption">
 			        <h3>Cooking Entry</h3>
-			        <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			        <a href="#" class="btn btn-primary" role="button">Groups</a> </p>
+			        <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;
+			        	<a href="#" class="btn btn-primary" role="button">Groups</a>&nbsp;&nbsp;
+			        <a href="#" class="btn btn-primary" role="button" data-toggle="modal" data-target="#myAlert">Subscribe</a> </p>
 			      </div>
 			    </div>
 			  </div>
@@ -104,8 +106,9 @@
 			      <img src="images/d8.jpg" alt="img">
 			      <div class="caption">
 			        <h3>Piano (mid-level)</h3>
-			        <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			        <a href="#" class="btn btn-primary" role="button">Groups</a> </p>
+			        <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;
+			        	<a href="#" class="btn btn-primary" role="button">Groups</a>&nbsp;&nbsp;
+			        <a href="#" class="btn btn-primary" role="button" data-toggle="modal" data-target="#myAlert">Subscribe</a> </p>
 			      </div>
 			    </div>
 			  </div>
@@ -116,8 +119,9 @@
 			      <img src="images/d4.jpeg" alt="img">
 			      <div class="caption">
 			        <h3>Work Out Tips</h3>
-			        <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			        <a href="#" class="btn btn-primary" role="button">Groups</a> </p>
+			        <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;
+			        	<a href="#" class="btn btn-primary" role="button">Groups</a>&nbsp;&nbsp;
+			        <a href="#" class="btn btn-primary" role="button" data-toggle="modal" data-target="#myAlert">Subscribe</a> </p>
 			      </div>
 			    </div>
 			  </div>
@@ -126,8 +130,9 @@
 			      <img src="images/d7.jpeg" alt="img">
 			      <div class="caption">
 			        <h3>Leather Working</h3>
-			        <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			        <a href="#" class="btn btn-primary" role="button">Groups</a> </p>
+			        <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;
+			        	<a href="#" class="btn btn-primary" role="button">Groups</a>&nbsp;&nbsp;
+			        <a href="#" class="btn btn-primary" role="button" data-toggle="modal" data-target="#myAlert">Subscribe</a> </p>
 			      </div>
 			    </div>
 			  </div>
@@ -136,8 +141,9 @@
 			      <img src="images/d3.jpg" alt="img">
 			      <div class="caption">
 			        <h3>Ice Skating</h3>
-			        <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			        <a href="#" class="btn btn-primary" role="button">Groups</a> </p>
+			        <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;
+			        	<a href="#" class="btn btn-primary" role="button">Groups</a>&nbsp;&nbsp;
+			        <a href="#" class="btn btn-primary" role="button" data-toggle="modal" data-target="#myAlert">Subscribe</a> </p>
 			      </div>
 			    </div>
 			  </div>
@@ -148,8 +154,9 @@
 			      <a href="guitar.html"><img src="images/d2.jpg" alt="img"></a>
 			      <div class="caption">
 			        <h3>Guitar Playing</h3>
-			        <p><a href="guitar.html" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			        <a href="group_play.html" class="btn btn-primary" role="button">Groups</a> </p>
+			        <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;
+			        	<a href="#" class="btn btn-primary" role="button">Groups</a>&nbsp;&nbsp;
+			        <a href="#" class="btn btn-primary" role="button" data-toggle="modal" data-target="#myAlert">Subscribe</a> </p>
 			      </div>
 			    </div>
 			  </div>
@@ -178,7 +185,6 @@
 			</p>
 		</div>
 
-		<!-- 模态框（Modal） -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 	<div class="modal-dialog">
 		<div class="modal-content">
@@ -220,6 +226,30 @@
 				<button type="button" class="btn btn-default" data-dismiss="modal">Close
 				</button>
 				<a class="btn btn-primary" href="skills_list_after.html" role="button">Create Skill</a>
+			</div>
+		</div><!-- /.modal-content -->
+	</div><!-- /.modal -->
+</div>
+
+<div class="modal fade" id="myAlert" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+					&times;
+				</button>
+				<h4 class="modal-title" id="myModalLabel">
+					Message:
+				</h4>
+			</div>
+			<div class="modal-body">
+				<h4 class="modal-title" id="myModalLabel" style="font-family: sans-serif; text-align: center;">
+					Congratulations! You subscribed the skill!
+				</h4>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-default" data-dismiss="modal">Close
+				</button>
 			</div>
 		</div><!-- /.modal-content -->
 	</div><!-- /.modal -->
