--- a/skills_list_after.html
+++ b/skills_list_after.html
@@ -83,8 +83,9 @@
                   <img src="images/d5.jpg" alt="img">
                   <div class="caption">
                     <h3>Laser Tag</h3>
-                    <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <a href="#" class="btn btn-primary" role="button">Groups</a> </p>
+                    <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;
+                        <a href="#" class="btn btn-primary" role="button">Groups</a>&nbsp;&nbsp;
+                    <a href="#" class="btn btn-primary" role="button" data-toggle="modal" data-target="#myAlert">Subscribe</a> </p>
                   </div>
                 </div>
               </div>
@@ -93,8 +94,9 @@
                   <img src="images/d1.jpg" alt="img">
                   <div class="caption">
                     <h3>Cooking Entry</h3>
-                    <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <a href="#" class="btn btn-primary" role="button">Groups</a> </p>
+                    <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;
+                        <a href="#" class="btn btn-primary" role="button">Groups</a>&nbsp;&nbsp;
+                    <a href="#" class="btn btn-primary" role="button" data-toggle="modal" data-target="#myAlert">Subscribe</a> </p>
                   </div>
                 </div>
               </div>
@@ -103,8 +105,9 @@
                   <img src="images/d8.jpg" alt="img">
                   <div class="caption">
                     <h3>Piano (mid-level)</h3>
-                    <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <a href="#" class="btn btn-primary" role="button">Groups</a> </p>
+                    <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;
+                        <a href="#" class="btn btn-primary" role="button">Groups</a>&nbsp;&nbsp;
+                    <a href="#" class="btn btn-primary" role="button" data-toggle="modal" data-target="#myAlert">Subscribe</a> </p>
                   </div>
                 </div>
               </div>
@@ -115,8 +118,9 @@
                   <img src="images/d4.jpeg" alt="img">
                   <div class="caption">
                     <h3>Work Out Tips</h3>
-                    <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <a href="#" class="btn btn-primary" role="button">Groups</a> </p>
+                    <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;
+                        <a href="#" class="btn btn-primary" role="button">Groups</a>&nbsp;&nbsp;
+                    <a href="#" class="btn btn-primary" role="button" data-toggle="modal" data-target="#myAlert">Subscribe</a> </p>
                   </div>
                 </div>
               </div>
@@ -125,8 +129,9 @@
                   <img src="images/d7.jpeg" alt="img">
                   <div class="caption">
                     <h3>Leather Working</h3>
-                    <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <a href="#" class="btn btn-primary" role="button">Groups</a> </p>
+                    <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;
+                        <a href="#" class="btn btn-primary" role="button">Groups</a>&nbsp;&nbsp;
+                    <a href="#" class="btn btn-primary" role="button" data-toggle="modal" data-target="#myAlert">Subscribe</a> </p>
                   </div>
                 </div>
               </div>
@@ -135,8 +140,9 @@
                   <img src="images/d3.jpg" alt="img">
                   <div class="caption">
                     <h3>Ice Skating</h3>
-                    <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <a href="#" class="btn btn-primary" role="button">Groups</a> </p>
+                    <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;
+                        <a href="#" class="btn btn-primary" role="button">Groups</a>&nbsp;&nbsp;
+                    <a href="#" class="btn btn-primary" role="button" data-toggle="modal" data-target="#myAlert">Subscribe</a> </p>
                   </div>
                 </div>
               </div>
@@ -147,8 +153,9 @@
                   <a href="guitar.html"><img src="images/d2.jpg" alt="img"></a>
                   <div class="caption">
                     <h3>Guitar Playing</h3>
-                    <p><a href="guitar.html" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <a href="group_play.html" class="btn btn-primary" role="button">Groups</a> </p>
+                    <p><a href="guitar.html" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;
+                        <a href="group_play.html" class="btn btn-primary" role="button">Groups</a>&nbsp;&nbsp;
+                    <a href="#" class="btn btn-primary" role="button" data-toggle="modal" data-target="#myAlert">Subscribe</a> </p>
                   </div>
                 </div>
               </div>
@@ -157,8 +164,9 @@
                   <a href="dancing_before.html"><img src="images/d6.jpg" alt="img"></a>
                   <div class="caption">
                     <h3>Dance</h3>
-                    <p><a href="dancing_before.html" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <a href="#" class="btn btn-primary" role="button">Groups</a> </p>
+                    <p><a href="dancing_before.html" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;
+                        <a href="#" class="btn btn-primary" role="button">Groups</a>&nbsp;&nbsp;
+                    <a href="#" class="btn btn-primary" role="button" data-toggle="modal" data-target="#myAlert">Subscribe</a> </p>
                   </div>
                 </div>
               </div>
@@ -220,6 +228,30 @@
                 </button>
                 <button type="button" class="btn btn-primary">
                     submit
+                </button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal -->
+</div>
+
+<div class="modal fade" id="myAlert" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                    &times;
+                </button>
+                <h4 class="modal-title" id="myModalLabel">
+                    Message:
+                </h4>
+            </div>
+            <div class="modal-body">
+                <h4 class="modal-title" id="myModalLabel" style="font-family: sans-serif; text-align: center;">
+                    Congratulations! You subscribed the skill!
+                </h4>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close
                 </button>
             </div>
         </div><!-- /.modal-content -->
