--- a/dancing_before.html
+++ b/dancing_before.html
@@ -36,7 +36,9 @@
         <span class="fa fa-object-group" aria-hidden="true"></span>Dance Strategies</h1>
         <div class="skill_desc">
           <h4><b>Description: </b>Check out these resources to help you learn new dance moves!</h4>
-          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Create Strategy</button>
+          <button type="button" class="btn btn-lg btn-info new-btn" data-toggle="modal" data-target="#myModal">
+          <i class="fa fa-plus"></i>Create Strategy
+          </button>
         </div>
           <hr>
       </div>
