--- a/skills_list.html
+++ b/skills_list.html
@@ -154,8 +154,8 @@
 			      <a href="guitar.html"><img src="images/d2.jpg" alt="img"></a>
 			      <div class="caption">
 			        <h3>Guitar Playing</h3>
-			        <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;
-			        	<a href="#" class="btn btn-primary" role="button">Groups</a>&nbsp;&nbsp;
+			        <p><a href="guitar.html" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;
+			        	<a href="group_play.html" class="btn btn-primary" role="button">Groups</a>&nbsp;&nbsp;
 			        <a href="#" class="btn btn-primary" role="button" data-toggle="modal" data-target="#myAlert">Subscribe</a> </p>
 			      </div>
 			    </div>
