update font style

--- a/skills_list.html
+++ b/skills_list.html
@@ -192,30 +192,30 @@
 				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
 					&times;
 				</button>
-				<h4 class="modal-title" id="myModalLabel">
-					Create a new skill
+				<h4 class="modal-title" id="myModalLabel" style="font-family: sans-serif; font-weight: bold; font-size: 24px;">
+					Create Skill
 				</h4>
 			</div>
 			<div class="modal-body">
 				<div class="form-group">
-			    	<label for="name">Skill Name:</label>
+			    	<label for="name" style="font-family: sans-serif; font-weight: bold;">Skill Name:</label>
 			    	<input type="text" class="form-control" id="name" placeholder="">
 			  	</div>
 			 	 <br>
 		        <div class="form-group">
-			    	<label for="name">Description:</label>
+			    	<label for="name" style="font-family: sans-serif; font-weight: bold;">Description:</label>
 			    	<textarea class="form-control" rows="4"></textarea>
 			  	</div>
 			  	<input id="lefile" type="file" style="display:none">
-				<div class="input-append" style="display:none">
+				<div class="input-append" style="display:none;">
 					<input id="photoCover" type="text" class="form-control">
 					<a class="btn btn-primary" role="button" onclick="$('input[id=lefile]').click();">Browse</a>
 				</div>
 				<br>
 				<div class="form-group">
-					<label for="name">Choose a picture as your cover:</label>
+					<label for="name" style="font-family: sans-serif; font-weight: bold;">Choose file</label>
 					<div class="input-group input-file" name="Fichier1">
-    					<input type="text" class="form-control" placeholder='Choose a file...' />
+    					<input type="text" class="form-control" placeholder='Choose...' />
            				<span class="input-group-btn">
         				<button class="btn btn-default btn-choose" type="button" onclick="$('input[id=lefile]').click();">Choose</button>
     					</span>
@@ -238,12 +238,12 @@
 				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
 					&times;
 				</button>
-				<h4 class="modal-title" id="myModalLabel">
+				<h4 class="modal-title" id="myModalLabel" style="font-family: sans-serif; font-weight: bold;">
 					Message:
 				</h4>
 			</div>
 			<div class="modal-body">
-				<h4 class="modal-title" id="myModalLabel" style="font-family: sans-serif; text-align: center;">
+				<h4 class="modal-title" id="myModalLabel" style="font-family: sans-serif; font-weight: bold; text-align: center;">
 					Congratulations! You subscribed the skill!
 				</h4>
 			</div>
