--- a/homepage.html
+++ b/homepage.html
@@ -38,7 +38,7 @@
   				<h3 id = "lead">Learn, track, and practice your skill the easy way!</h3>
   				<hr id="hr1">
   				<form action="skills_list.html">
-                     <button class="btn btn-default btn-lg"><i class="fa fa-graduation-cap" aria-hidden="true"></i> Go To Skills List!</button>
+                     <button class="btn btn-default btn-lg"><i class="fa fa-book" aria-hidden="true"></i> Go To Skills List!</button>
           </form>
 				</div>
 			</div>
@@ -79,7 +79,7 @@
                   <div class="modal-header">
                      <button type="button" class="close" data-dismiss="modal">&times;</button>
                      <h2 class="modal-title">Find the good stuff</h2>
-                     <p>Check out some interesting skill commuities and we recommend you subscribe to at least 5.</p>
+                     <p>Check out some interesting skill commuities and we recommend you subscribe to at least 5. <strong>After subscribing, you can get trending posts on your page and track progress of your own skills </strong></p>
                    </div>
                    <div class="modal-body">
                       <ul class="list-group interest-item">
