--- a/userpage.html
+++ b/userpage.html
@@ -2,15 +2,19 @@
 <html>
 <head>
 	<title> Skill-It </title>
-
+	<link rel="stylesheet" type="text/css" href="skills.css"/>
+  
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  
+  <link rel="stylesheet" media="all" href="circular-prog-bar.css"/>
+  <link rel="stylesheet" type="text/css" href="userpage.css"/>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="skills.css"/>
-  <link rel="stylesheet" type="text/css" href="userpage.css"/>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
+
 </head>
 <body>
 	<nav class="navbar navbar-default">
@@ -23,16 +27,15 @@
                     <button type="button" class="btn btn-success" href="#">Logout</button>
                 </div>
                 <form class="navbar-form navbar-left">
-                  <a class="btn btn-primary" href="skills_list.html" role="button">All Skills/Groups</a>
+                  <a class="btn btn-default" href="skills_list.html?" role="button">All Skills/Groups</a>
+                  <a href="#" data-toggle="modal" data-target="#exampleModalCenter"><span class="link-spanner"></span></a>
                 </form>
-                <div class="navbar-form navbar-left">
-                </div>
             </div>
         </nav>
 
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
-    <h1 class="display-4">My News</h1>
+    <h1 class="display-4">My Page</h1>
   </div>
 </div>
 
@@ -40,10 +43,11 @@
 
 <div class="container">
   <ul class="nav nav-tabs">
-    <li role="presentation" class="active" id="posts-li"><a href="#" id="posts-a">Recent Posts</a></li>
-    <li role="presentation" id="progress-li"><a href="#" id="progress-a">Friends' Progress</a></li>
+    <li class="active" role="presentation" id="posts-li"><a href="#" id="posts-a">Trending Posts</a></li>
     <li role="presentation" id="messages-li"><a href="#" id="messages-a">Messages</a></li>
   </ul>
+
+  
 
   <div class="posts-menu">
     <div class="media">
@@ -58,17 +62,16 @@
         <p>
           I'd definetely recommend the <a href="https://itunes.apple.com/us/app/all-guitar-chords/id416947605?mt=8">All Chords</a> and <a href="https://itunes.apple.com/us/app/ultimate-guitar-chords-tabs/id357828853?mt=8">Tabs&Chords</a> apps to any beginners out there. The first one helps teach you fingering for all kinds of chords and the second one is great for getting the chords or tabs for tons of songs!
           <br>
-          <a href="guitarpost.html" type="button" class="btn btn-primary btn-sm read-btn" >Read more</a>
+          <button type="button" class="btn btn-primary btn-sm read-btn" href="#">Read more</button>
         </p>
           <div class="post-info1">
-            <i class="glyphicon glyphicon-comment"></i> <a href="#">3 Comments</a>
-            | <i class="glyphicon glyphicon-thumbs-up"></i> <a href="#">4 Likes</a>
+            <i class="glyphicon glyphicon-comment"></i> <a href="#">655 Comments</a>
+            | <i class="glyphicon glyphicon-thumbs-up"></i> <a href="#">1417 Likes</a>
           </div>
           <div class="post-info2">
             <i class="glyphicon glyphicon-user"></i> by <a href="#">John</a>
             | <i class="glyphicon glyphicon-calendar"></i> Sept 16th, 2017
           </div>
-        <p>
       </div>
     </div>
 
@@ -89,14 +92,13 @@
           <button type="button" class="btn btn-primary btn-sm read-btn" href="#">Read more</button>
         </p>
           <div class="post-info1">
-            <i class="glyphicon glyphicon-comment"></i> <a href="#">2 Comments</a>
-            | <i class="glyphicon glyphicon-thumbs-up"></i> <a href="#">8 Likes</a>
+            <i class="glyphicon glyphicon-comment"></i> <a href="#">255 Comments</a>
+            | <i class="glyphicon glyphicon-thumbs-up"></i> <a href="#">821 Likes</a>
           </div>
           <div class="post-info2">
             <i class="glyphicon glyphicon-user"></i> by <a href="#">Mike</a>
             | <i class="glyphicon glyphicon-calendar"></i> Sept 03th, 2017
           </div>
-        <p>
       </div>
     </div>
 
@@ -116,54 +118,23 @@
           <button type="button" class="btn btn-primary btn-sm read-btn" href="#">Read more</button>
         </p>
           <div class="post-info1">
-            <i class="glyphicon glyphicon-comment"></i> <a href="#">7 Comments</a>
-            | <i class="glyphicon glyphicon-thumbs-up"></i> <a href="#">24 Likes</a>
+            <i class="glyphicon glyphicon-comment"></i> <a href="#">745 Comments</a>
+            | <i class="glyphicon glyphicon-thumbs-up"></i> <a href="#">2481 Likes</a>
           </div>
           <div class="post-info2">
             <i class="glyphicon glyphicon-user"></i> by <a href="#">Michael</a>
             | <i class="glyphicon glyphicon-calendar"></i> Aug 11th, 2017
           </div>
-        <p>
       </div>
     </div>
   </div>
 
-  <div class="progress-menu">
-    <ul class="list-group">
-      <li class="list-group-item">
-        <h4><i class="fa fa-trophy"></i> Michael has mastered fencing!</h4>
-        08/27 - <a href="#">Michael</a> has been fencing for over fifty days, mastering over three techniques.
-      </li>
-
-      <li class="list-group-item">
-        <h4><i class="fa fa-star-half"></i> Greg started baking today!!</h4>
-        <a href="#"> Click here </a> to view <a href="#">Greg</a>'s recently baked cupcake!</p>
-      </li>
-
-      <li class="list-group-item">
-        <h4><i class="fa fa-trophy"></i> Join Matt at honing soccer skills</h4>
-        Want to learn how to dribble like Neymar? Ask <a href="#">Matt</a>, who's handling the dribbling skill well!
-      </li>
-
-      <li class="list-group-item">
-        <h4><i class="fa fa-star"></i> Want to learn to play the violin? Talk to Julia</h4>
-        Listen to some soothing Chopin as <a href="#">Julia</a> truly excels.
-      </li>
-
-      <li class="list-group-item">
-        <h4><i class="fa fa-trophy"></i> Hit a hole in one with Freddy</h4>
-        We're very impressed with <a href="#">Freddy</a>, is he the next Tiger Woods?
-      </li>
-
-
-    </ul>
-  </div>
 
   <div class="messages-menu">
     <div class="list-group">
       <button class="list-group-item" type="button">
         Fencing
-        <span class="badge badge-blue badge-pill">14</span>
+        <span class="badge badge-primary badge-pill">14</span>
       </button>
 
       <button class="list-group-item" type="button">
@@ -205,12 +176,15 @@
         Cookie Making
         <span class="badge badge-primary badge-pill">14</span>
       </button>
+      
+    </div>
+    
+  </div>
+  
 
     </div>
 
   </div>
-
-
 
 
 
