--- a/skills_list.html
+++ b/skills_list.html
@@ -24,6 +24,14 @@
 		// document.getElementById("div7").style.display="none";
 		// document.getElementById("div8").style.display="none";
 	}
+	function changetext(){
+		document.getElementById("Unsubscribe").style.display="inline-block";
+		document.getElementById("subscribe").style.display="none";
+	}
+	function changeback(){
+		document.getElementById("subscribe").style.display="inline-block";
+		document.getElementById("Unsubscribe").style.display="none";
+	}
 	</script>
 </head>
 
@@ -86,7 +94,8 @@
 			        <h3>Laser Tag</h3>
 			        <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;
 			        	<a href="#" class="btn btn-primary" role="button">Groups</a>&nbsp;&nbsp;
-			        <a href="#" class="btn btn-primary" role="button" data-toggle="modal" data-target="#myAlert">Subscribe</a> </p>
+			        	<a id="Unsubscribe" href="#" class="btn btn-primary" onclick="changeback()" role="button" style="display: none;">Unsubscribe</a>
+			        <a id="subscribe" href="#" class="btn btn-primary" onclick="changetext()" role="button" data-toggle="modal" data-target="#myAlert">Subscribe</a></p>
 			      </div>
 			    </div>
 			  </div>
@@ -238,7 +247,7 @@
 				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
 					&times;
 				</button>
-				<h4 class="modal-title" id="myModalLabel" style="font-family: sans-serif; font-weight: bold;">
+				<h4 class="modal-title" id="myModalLabel" style="font-family: sans-serif; font-weight: bold; font-size: 24px;">
 					Message:
 				</h4>
 			</div>
