--- a/progress.html
+++ b/progress.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> Skill-It </title>
+	<title> Skill-It: My Skills </title>
 	<link rel="stylesheet" type="text/css" href="skills.css"/>
   
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -39,6 +39,28 @@
 	  </div>
 	</div>
 
+	 <div class="modal fade" id="goal-setting-modal" role="dialog">
+       <div class="modal-dialog " role="document">
+           <div class="modal-content">
+               <div class="modal-header">
+                 <button type="button" class="close" data-dismiss="modal">&times;</button>
+                 <h2 class="modal-title">Goal Setting</h2>
+               </div>
+
+               <div class="modal-body">
+                 <form action="#" class="modal-form">
+                   <input class = "form-control inputText" type="text" placeholder="Enter a new goal" id = "goal-name" name="goal-name" required>
+
+                   <input class = "form-control inputText" type="text" placeholder="Enter the estimated total hours to spend" id = "total-hour-goal" name="total-hour-goal" required>
+
+                   <button class="btn btn-primary form-btn" id="update-goal-btn" type="button">Submit</button>
+                   <p class="warning-message"><span class="label label-warning">Warning</span> this will reset your current progress</p>
+                 </form>
+           		</div>
+       		</div>
+   		</div>
+   	</div>
+
 	<div class="container">
 	  <ul class="nav nav-tabs">
 	  	<li role="presentation" class="active" id="user-progress-li"><a href="#" id="user-progress-a">My Progress</a></li>
@@ -51,11 +73,13 @@
 	        <div class="col-sm-6 col-md-4">
 	            <div class="thumbnail">
 	              <div class="caption">
-	                <h3 class="skill-title">Guitar Playing</h3>
-	                <form action="#">
-	                  <input type="text" class="form-control text-hour" placeholder="hours you spent today" id="text-hour1">
-	                  <button type ="button" class ="btn btn-primary update-btn" id="update-btn1"> Submit </button>
-	                </form>
+	                <h3 class="skill-title">Guitar Playing </h3>
+	                <h4 class="goal">Goal: <span id="goal1">Improve chord knowledge</span> 
+	                	<div class = "goal-op">
+	                		<a href="#" data-target="#goal-setting-modal" data-toggle="modal"><i class="fa fa-cog" aria-hidden="true"></i> </a>
+	                		<a href="guitar.html"><i class="fa fa-share" aria-hidden="true"></i></a>
+	                	</div>
+	                </h4>
 	              </div>
 	              <div class="progress-"></div>
 	              <div id = "progress-circle1" class="progress-circle over50 p66">
@@ -70,6 +94,10 @@
 	                <p><span id = "remainHour1">68</span> more hours to master</p>
 	              </div>
 	            	<canvas id="lineChart1" width="40" height="40"></canvas>
+	            	<form class = "hour-update-form" action="#">
+	                  <input type="text" class="form-control text-hour" placeholder="hours you spent today" id="text-hour1">
+	                  <button type ="button" class ="btn btn-primary update-btn" id="update-btn1"> Submit </button>
+	                </form>
 	  			</div>
 			</div>
 
@@ -77,10 +105,13 @@
 	            <div class="thumbnail">
 	              <div class="caption">
 	                <h3 class="skill-title">Leather Working</h3>
-	                <form action="#">
-	                  <input type="text" class="form-control text-hour" placeholder="hours you spent today" id="text-hour2">
-	                  <button type ="button" class ="btn btn-primary update-btn" id="update-btn2"> Submit </button>
-	                </form>
+	                <h4 class="goal">Goal: <span id="goal2">Master basic skill</span> 
+	                	<div class = "goal-op">
+	                		<a href="#"><i class="fa fa-cog" aria-hidden="true"></i> </a>
+	                		<a href="#"><i class="fa fa-share" aria-hidden="true"></i></a>
+	                	</div>
+	                	
+	                </h4>
 	              </div>
 	              <div id = "progress-circle2" class="progress-circle p20">
 	                 <span id="percentage2">20%</span>
@@ -94,6 +125,10 @@
 	                <p><span  id = "remainHour2">60</span> more hours to master</p>
 	              </div>
 	              <canvas id="lineChart2" width="40" height="40"></canvas>
+	              <form class = "hour-update-form" action="#">
+	                  <input type="text" class="form-control text-hour" placeholder="hours you spent today" id="text-hour2">
+	                  <button type ="button" class ="btn btn-primary update-btn" id="update-btn2"> Submit </button>
+	                </form>
 	          	</div>
 	        </div> 
 	  	</div>
