Updated navbar and some button styles

--- a/dancingpost.html
+++ b/dancingpost.html
@@ -22,6 +22,7 @@
 
             <div class="collapse navbar-collapse">
                 <div class="navbar-form navbar-right">
+                  <a class="btn btn-primary" href="progress.html" role="button">My Progress</a>
                   <a class="btn btn-info" href="userpage.html" role="button">Hey Chris!</a>
                     <button type="button" class="btn btn-success" href="#">Logout</button>
                 </div>
@@ -38,7 +39,7 @@
         <span class="fa fa-object-group" aria-hidden="true"></span>Dance Strategies</h1>
         <div class="skill_desc">
           <h4><b>Description: </b>Check out these resources to help you learn new dance moves!</h4>
-          <a class="btn btn-primary" href="dancing_after.html" role="button">Back to Strategy Page</a>
+          <a class="btn btn-lg btn-info new-btn" href="dancing_after.html" role="button">Back to Strategy Page</a>
         </div>
           <hr>
       </div>
