--- a/group_play.html
+++ b/group_play.html
@@ -21,6 +21,7 @@
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
+      <a class="btn btn-primary" href="progress.html" role="button">My Progress</a>&#160; &#160;
     <a class="btn btn-info" href="userpage.html" role="button">Hey Chris!</a>&#160; &#160;
       <button class="btn btn-success my-2 my-sm-0" type="submit">Log Out</button>
     </form>
