--- a/progress.html
+++ b/progress.html
@@ -3,12 +3,12 @@
 <head>
 	<title> Skill-It: My Skills </title>
 	<link rel="stylesheet" type="text/css" href="skills.css"/>
-  
+
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  
+
   <link rel="stylesheet" media="all" href="circular-prog-bar.css"/>
   <link rel="stylesheet" type="text/css" href="progress.css"/>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
@@ -23,11 +23,12 @@
 	    </div>
 	    <div class="collapse navbar-collapse">
 	        <div class="navbar-form navbar-right">
+	        	<a class="btn btn-primary" href="progress.html" role="button">My Progress</a>
 	            <a class="btn btn-info" href="userpage.html" role="button">Hey Chris!</a>
 	            <button type="button" class="btn btn-success" href="#">Logout</button>
 	        </div>
 	        <form class="navbar-form navbar-left">
-	          <a class="btn btn-default" href="skills_list.html?" role="button">All Skills/Groups</a>
+	          <a class="btn btn-primary" href="skills_list.html?" role="button">All Skills/Groups</a>
 	          <a href="#" data-toggle="modal" data-target="#exampleModalCenter"><span class="link-spanner"></span></a>
 	        </form>
 	    </div>
@@ -68,13 +69,13 @@
 	  </ul>
 
 	  <div class="user-progress-menu">
-	  	
+
 	  	<div class="row progress-row">
 	        <div class="col-sm-6 col-md-4">
 	            <div class="thumbnail">
 	              <div class="caption">
 	                <h3 class="skill-title">Guitar Playing </h3>
-	                <h4 class="goal">Goal: <span id="goal1">Improve chord knowledge</span> 
+	                <h4 class="goal">Goal: <span id="goal1">Improve chord knowledge</span>
 	                	<div class = "goal-op">
 	                		<a href="#" data-target="#goal-setting-modal" data-toggle="modal"><i class="fa fa-cog" aria-hidden="true"></i> </a>
 	                		<a href="guitar.html"><i class="fa fa-share" aria-hidden="true"></i></a>
@@ -105,12 +106,12 @@
 	            <div class="thumbnail">
 	              <div class="caption">
 	                <h3 class="skill-title">Leather Working</h3>
-	                <h4 class="goal">Goal: <span id="goal2">Master basic skill</span> 
+	                <h4 class="goal">Goal: <span id="goal2">Master basic skill</span>
 	                	<div class = "goal-op">
 	                		<a href="#"><i class="fa fa-cog" aria-hidden="true"></i> </a>
 	                		<a href="#"><i class="fa fa-share" aria-hidden="true"></i></a>
 	                	</div>
-	                	
+
 	                </h4>
 	              </div>
 	              <div id = "progress-circle2" class="progress-circle p20">
@@ -130,7 +131,7 @@
 	                  <button type ="button" class ="btn btn-primary update-btn" id="update-btn2"> Submit </button>
 	                </form>
 	          	</div>
-	        </div> 
+	        </div>
 	  	</div>
 	  	</div>
 
@@ -138,7 +139,7 @@
 	    <ul class="list-group">
 	      <li class="list-group-item">
 	        <h4><i class="fa fa-trophy"></i> Michael has mastered fencing!</h4>
-	        08/27 - <a href="#">Michael</a> has been fencing for over fifty days, mastering over three techniques.
+	        08/27 - <a href="user_progress.html">Michael</a> has been fencing for over fifty days, mastering over three techniques.
 	      </li>
 
 	      <li class="list-group-item">
