--- a/skills_list.html
+++ b/skills_list.html
@@ -44,6 +44,7 @@
             </div>
             <div class="collapse navbar-collapse">
                 <div class="navbar-form navbar-right">
+                	<a class="btn btn-primary" href="progress.html" role="button">My Progress</a>
                     <a class="btn btn-info" href="userpage.html" role="button">Hey Chris!</a>
                     <button type="button" class="btn btn-success" href="#">Logout</button>
                 </div>
