--- a/userpage.html
+++ b/userpage.html
@@ -3,12 +3,12 @@
 <head>
 	<title> Skill-It </title>
 	<link rel="stylesheet" type="text/css" href="skills.css"/>
-  
+
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  
+
   <link rel="stylesheet" media="all" href="circular-prog-bar.css"/>
   <link rel="stylesheet" type="text/css" href="userpage.css"/>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
@@ -23,11 +23,12 @@
             </div>
             <div class="collapse navbar-collapse">
                 <div class="navbar-form navbar-right">
+                  <a class="btn btn-primary" href="progress.html" role="button">My Progress</a>
                     <a class="btn btn-info" href="userpage.html" role="button">Hey Chris!</a>
                     <button type="button" class="btn btn-success" href="#">Logout</button>
                 </div>
                 <form class="navbar-form navbar-left">
-                  <a class="btn btn-default" href="skills_list.html?" role="button">All Skills/Groups</a>
+                  <a class="btn btn-primary" href="skills_list.html?" role="button">All Skills/Groups</a>
                   <a href="#" data-toggle="modal" data-target="#exampleModalCenter"><span class="link-spanner"></span></a>
                 </form>
             </div>
@@ -47,7 +48,7 @@
     <li role="presentation" id="messages-li"><a href="#" id="messages-a">Messages</a></li>
   </ul>
 
-  
+
 
   <div class="posts-menu">
     <div class="media">
@@ -176,11 +177,11 @@
         Cookie Making
         <span class="badge badge-primary badge-pill">14</span>
       </button>
-      
+
     </div>
-    
+
   </div>
-  
+
 
     </div>
 
