--- a/user_progress.html
+++ b/user_progress.html
@@ -3,7 +3,7 @@
 <!-- Head -->
 
 <head>
-    <title>Skill List</title>
+    <title>User Progress</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link rel="stylesheet" href="css/font-awesome.css" type="text/css" media="all">
@@ -36,6 +36,7 @@
             </div>
             <div class="collapse navbar-collapse">
                 <div class="navbar-form navbar-right">
+                    <a class="btn btn-primary" href="progress.html" role="button">My Progress</a>
                     <a class="btn btn-info" href="userpage.html" role="button">Hey Chris!</a>
                     <button type="button" class="btn btn-success" href="#">Logout</button>
                 </div>
@@ -59,7 +60,7 @@
     <div class="banner">
         <div class="banner-layer">
             <h1 class="title-layouts">
-                <span class="fa fa-object-group" aria-hidden="true"></span>User Progress</h1>
+                <span class="fa fa-object-group" aria-hidden="true"></span>Michael's Progress</h1>
         </div>
         <div class="wthreeproductdisplay">
             <div class="row">
@@ -80,7 +81,7 @@
                 </div>
               </div>
               <div id="div2" class="col-sm-6 col-md-6" style="text-align: center;">
-                <div id="Cooking Entry" class="thumbnail"> 
+                <div id="Cooking Entry" class="thumbnail">
                   <div class="caption">
                     <h3>Cooking Entry</h3>
                     <!-- <p><a href="#" class="btn btn-primary" role="button">Strategies</a>&nbsp;&nbsp;
@@ -121,7 +122,7 @@
                     <a href="#" class="btn btn-primary" role="button" data-toggle="modal" data-target="#myAlert">Subscribe</a> </p>
                   </div>
                 </div>
-              </div>  
+              </div>
             </div>
         </div>
     <!-- //cart's-Product-Display -->
